--- a/web-client/index.html
+++ b/web-client/index.html
@@ -902,6 +902,195 @@
             color: var(--error-color);
         }
 
+        /* 甘特图样式 */
+        .gantt-container {
+            padding: 24px;
+            background: var(--background-primary);
+            border-radius: var(--border-radius);
+            margin: 16px 0;
+        }
+
+        .gantt-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 24px;
+            padding-bottom: 16px;
+            border-bottom: 1px solid var(--border-color);
+        }
+
+        .gantt-header h3 {
+            color: var(--text-primary);
+            font-size: 1.2rem;
+            font-weight: 600;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            margin: 0;
+        }
+
+        .gantt-controls {
+            display: flex;
+            gap: 8px;
+        }
+
+        .gantt-chart {
+            position: relative;
+            overflow-x: auto;
+            background: var(--background-secondary);
+            border-radius: var(--border-radius);
+            border: 1px solid var(--border-color);
+        }
+
+        .gantt-timeline {
+            display: flex;
+            background: var(--background-tertiary);
+            border-bottom: 1px solid var(--border-color);
+            min-height: 60px;
+            position: sticky;
+            top: 0;
+            z-index: 10;
+        }
+
+        .gantt-timeline-cell {
+            min-width: 120px;
+            padding: 8px 12px;
+            border-right: 1px solid var(--border-color);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            font-size: 0.85rem;
+        }
+
+        .gantt-timeline-cell .date {
+            font-weight: 600;
+            color: var(--text-primary);
+        }
+
+        .gantt-timeline-cell .day {
+            color: var(--text-secondary);
+            font-size: 0.75rem;
+        }
+
+        .gantt-timeline-cell.today {
+            background: var(--primary-color);
+            color: white;
+        }
+
+        .gantt-timeline-cell.today .date,
+        .gantt-timeline-cell.today .day {
+            color: white;
+        }
+
+        .gantt-tasks {
+            min-height: 400px;
+        }
+
+        .gantt-task-row {
+            display: flex;
+            border-bottom: 1px solid var(--border-color-light);
+            min-height: 60px;
+            align-items: center;
+            position: relative;
+        }
+
+        .gantt-task-row:hover {
+            background: var(--background-hover);
+        }
+
+        .gantt-task-info {
+            min-width: 200px;
+            max-width: 200px;
+            padding: 12px;
+            border-right: 1px solid var(--border-color);
+            background: var(--background-primary);
+            position: sticky;
+            left: 0;
+            z-index: 5;
+        }
+
+        .gantt-task-title {
+            font-weight: 500;
+            color: var(--text-primary);
+            font-size: 0.9rem;
+            margin-bottom: 4px;
+            line-height: 1.3;
+        }
+
+        .gantt-task-meta {
+            display: flex;
+            gap: 8px;
+            font-size: 0.75rem;
+            color: var(--text-secondary);
+        }
+
+        .gantt-task-timeline {
+            flex: 1;
+            position: relative;
+            display: flex;
+        }
+
+        .gantt-task-bar {
+            position: absolute;
+            height: 24px;
+            border-radius: 12px;
+            display: flex;
+            align-items: center;
+            padding: 0 8px;
+            font-size: 0.75rem;
+            font-weight: 500;
+            color: white;
+            cursor: pointer;
+            transition: var(--transition);
+            top: 50%;
+            transform: translateY(-50%);
+        }
+
+        .gantt-task-bar:hover {
+            transform: translateY(-50%) scale(1.02);
+            box-shadow: var(--shadow-medium);
+        }
+
+        .gantt-task-bar.priority-1 {
+            background: linear-gradient(135deg, #E53E3E, #C53030);
+        }
+
+        .gantt-task-bar.priority-2 {
+            background: linear-gradient(135deg, #DD6B20, #C05621);
+        }
+
+        .gantt-task-bar.priority-3 {
+            background: linear-gradient(135deg, #38A169, #2F855A);
+        }
+
+        .gantt-task-bar.completed {
+            background: linear-gradient(135deg, #68D391, #48BB78);
+            opacity: 0.7;
+        }
+
+        .gantt-empty-state {
+            text-align: center;
+            padding: 60px 20px;
+            color: var(--text-secondary);
+        }
+
+        .gantt-empty-state i {
+            font-size: 3rem;
+            margin-bottom: 16px;
+            opacity: 0.5;
+        }
+
+        .gantt-empty-state h3 {
+            margin: 0 0 8px 0;
+            color: var(--text-primary);
+        }
+
+        .gantt-empty-state p {
+            margin: 0;
+            font-size: 0.9rem;
+        }
+
         .task-count {
             background: var(--primary-color);
             color: white;
@@ -1294,6 +1483,10 @@
                                 <i class="fas fa-columns"></i>
                                 看板视图
                             </button>
+                            <button class="view-btn" data-view="gantt">
+                                <i class="fas fa-chart-gantt"></i>
+                                甘特图
+                            </button>
                         </div>
                     </div>
 
@@ -1384,6 +1577,34 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- 甘特图视图 -->
+                <div class="gantt-container" id="ganttView" style="display: none;">
+                    <div class="gantt-header">
+                        <h3>
+                            <i class="fas fa-chart-gantt"></i>
+                            项目时间线
+                        </h3>
+                        <div class="gantt-controls">
+                            <button class="btn-secondary" onclick="taskManager.showGanttToday()">
+                                <i class="fas fa-calendar-day"></i>
+                                今天
+                            </button>
+                            <button class="btn-secondary" onclick="taskManager.showGanttWeek()">
+                                <i class="fas fa-calendar-week"></i>
+                                本周
+                            </button>
+                            <button class="btn-secondary" onclick="taskManager.showGanttMonth()">
+                                <i class="fas fa-calendar-alt"></i>
+                                本月
+                            </button>
+                        </div>
+                    </div>
+                    <div class="gantt-chart" id="ganttChart">
+                        <div class="gantt-timeline" id="ganttTimeline"></div>
+                        <div class="gantt-tasks" id="ganttTasks"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -1436,7 +1657,12 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="form-label">截止日期</label>
+                    <label class="form-label">开始时间</label>
+                    <input type="datetime-local" class="form-input" id="taskStartDate">
+                </div>
+
+                <div class="form-group">
+                    <label class="form-label">截止时间</label>
                     <input type="datetime-local" class="form-input" id="taskDueDate">
                 </div>
 
